Use provided qemu.conf in libvirt container
This allows us to workaround an issue where the default setting for
qemu changed to logging to virtlogd which is not yet containerized.

Change-Id: I9d25b1299c4f02068d1073c5b78d4c7a2099721e
Depends-On: I9a9705e5c79eec3bbaf02b491498886b858b7a95
Closes-Bug: #1652119

--- a/docker/services/nova-libvirt.yaml
+++ b/docker/services/nova-libvirt.yaml
@@ -55,6 +55,11 @@ outputs:
             volumes:
               - /var/lib/etc-data/json-config/nova-libvirt.json:/var/lib/kolla/config_files/config.json
               - /var/lib/etc-data/libvirt/libvirtd.conf:/var/lib/kolla/config_files/libvirtd.conf
+              # NOTE(mandre) Ideally the qemu.conf file is mounted in
+              # /var/lib/kolla/config_files and copied to the right place but
+              # copy-json.py doesn't allow us to do that without appending the
+              # file as an additional config on the CLI
+              - /var/lib/etc-data/libvirt/qemu.conf:/etc/libvirt/qemu.conf:ro
               - /etc/localtime:/etc/localtime:ro
               - /lib/modules:/lib/modules:ro
               - /run:/run
