Adds cluster status check_and_fail before running upgrade (step0)
This depends on a change in the pacemaker_cluster resource
https://review.gerrithub.io/#/c/307078/

Change-Id: Iaf50e27607b159173190912604198b6a471fe35f

--- a/puppet/services/pacemaker.yaml
+++ b/puppet/services/pacemaker.yaml
@@ -125,6 +125,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::pacemaker
       upgrade_tasks:
+        - name: Check pacemaker cluster running before upgrade
+          tags: step0,validation
+          pacemaker_cluster: state=online check_and_fail=true
         - name: Stop pacemaker cluster
           tags: step1
           pacemaker_cluster: state=offline
