--- a/puppet/services/apache-internal-tls-certmonger.yaml
+++ b/puppet/services/apache-internal-tls-certmonger.yaml
@@ -63,3 +63,7 @@ outputs:
               type: node
           for_each:
             $NETWORK: {get_attr: [ApacheNetworks, value]}
+      upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service httpd is running"
+          shell: /usr/bin/systemctl show 'httpd' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
