--- a/puppet/services/apache.yaml
+++ b/puppet/services/apache.yaml
@@ -66,3 +66,7 @@ outputs:
               - "%{hiera('apache_remote_proxy_ips_network')}"
       metadata_settings:
         get_attr: [ApacheTLS, role_data, metadata_settings]
+      upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service httpd is running"
+          shell: /usr/bin/systemctl show 'httpd' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
