--- a/puppet/services/cinder-scheduler.yaml
+++ b/puppet/services/cinder-scheduler.yaml
@@ -52,6 +52,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::cinder::scheduler
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-cinder-scheduler is running"
+          shell: /usr/bin/systemctl show 'openstack-cinder-scheduler' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop cinder_scheduler service
           tags: step2
           service: name=openstack-cinder-scheduler state=stopped
