--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -138,6 +138,9 @@ outputs:
       service_config_settings:
         get_attr: [GlanceBase, role_data, service_config_settings]
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-glance-api is running"
+          shell: /usr/bin/systemctl show 'openstack-glance-api' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop glance_api service
           tags: step2
           service: name=openstack-glance-api state=stopped
