--- a/puppet/services/gnocchi-metricd.yaml
+++ b/puppet/services/gnocchi-metricd.yaml
@@ -47,6 +47,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::gnocchi::metricd
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-gnocchi-metricd is running"
+          shell: /usr/bin/systemctl show 'openstack-gnocchi-metricd' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop gnocchi_metricd service
           tags: step2
           service: name=openstack-gnocchi-metricd state=stopped
