--- a/puppet/services/gnocchi-statsd.yaml
+++ b/puppet/services/gnocchi-statsd.yaml
@@ -46,6 +46,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::gnocchi::statsd
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-gnocchi-statsd is running"
+          shell: /usr/bin/systemctl show 'openstack-gnocchi-statsd' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop gnocchi_statsd service
           tags: step2
           service: name=openstack-gnocchi-statsd state=stopped
