--- a/puppet/services/neutron-l3.yaml
+++ b/puppet/services/neutron-l3.yaml
@@ -80,6 +80,9 @@ outputs:
       step_config: |
         include tripleo::profile::base::neutron::l3
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service neutron-l3-agent is running"
+          shell: /usr/bin/systemctl show 'neutron-l3-agent' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop neutron_l3 service
           tags: step2
           service: name=neutron-l3-agent state=stopped
