--- a/puppet/services/aodh-evaluator.yaml
+++ b/puppet/services/aodh-evaluator.yaml
@@ -41,6 +41,9 @@ outputs:
       step_config: |
         include tripleo::profile::base::aodh::evaluator
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-aodh-evaluator is running"
+          shell: /usr/bin/systemctl show 'openstack-aodh-evaluator' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop aodh_evaluator service
           tags: step2
           service: name=openstack-aodh-evaluator state=stopped
