--- a/puppet/services/aodh-notifier.yaml
+++ b/puppet/services/aodh-notifier.yaml
@@ -41,6 +41,9 @@ outputs:
       step_config: |
         include tripleo::profile::base::aodh::notifier
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-aodh-notifier is running"
+          shell: /usr/bin/systemctl show 'openstack-aodh-notifier' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop aodh_notifier service
           tags: step2
           service: name=openstack-aodh-notifier state=stopped
