--- a/puppet/services/ceilometer-agent-central.yaml
+++ b/puppet/services/ceilometer-agent-central.yaml
@@ -55,6 +55,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::central
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-ceilometer-central is running"
+          shell: /usr/bin/systemctl show 'openstack-ceilometer-central' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop ceilometer_agent_central service
           tags: step2
           service: name=openstack-ceilometer-central state=stopped
