--- a/puppet/services/ceilometer-agent-compute.yaml
+++ b/puppet/services/ceilometer-agent-compute.yaml
@@ -49,6 +49,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::compute
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-ceilometer-compute is running"
+          shell: /usr/bin/systemctl show 'openstack-ceilometer-compute' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop ceilometer_agent_compute service
           tags: step2
           service: name=openstack-ceilometer-compute state=stopped
