--- a/puppet/services/ceilometer-agent-notification.yaml
+++ b/puppet/services/ceilometer-agent-notification.yaml
@@ -50,6 +50,9 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::notification
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-ceilometer-notification is running"
+          shell: /usr/bin/systemctl show 'openstack-ceilometer-notification' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop ceilometer_agent_notification service
           tags: step2
           service: name=openstack-ceilometer-notification state=stopped
