--- a/puppet/services/ceilometer-api.yaml
+++ b/puppet/services/ceilometer-api.yaml
@@ -93,6 +93,9 @@ outputs:
       metadata_settings:
         get_attr: [ApacheServiceBase, role_data, metadata_settings]
       upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-ceilometer-api is running"
+          shell: /usr/bin/systemctl show 'openstack-ceilometer-api' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
         - name: Stop ceilometer_api service (running under httpd)
           tags: step2
           service: name=httpd state=stopped
