--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -86,6 +86,8 @@ outputs:
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/nova'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         nova::api_database_connection:
           list_join:
             - ''
@@ -95,6 +97,8 @@ outputs:
               - '@'
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/nova_api'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         nova::debug: {get_param: Debug}
         nova::purge_config: {get_param: EnableConfigPurge}
         nova::network::neutron::neutron_project_name: 'service'
