--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1063,6 +1063,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/cinder'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         glance_port: {get_param: [EndpointMap, GlanceInternal, port]}
         glance_password: {get_param: GlancePassword}
         glance_backend: {get_param: GlanceBackend}
@@ -1080,6 +1082,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/glance'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         heat_password: {get_param: HeatPassword}
         heat_stack_domain_admin_password: {get_param: HeatStackDomainAdminPassword}
         heat_dsn:
@@ -1090,6 +1094,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/heat'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         keystone_ca_certificate: {get_param: KeystoneCACertificate}
         keystone_signing_key: {get_param: KeystoneSigningKey}
         keystone_signing_certificate: {get_param: KeystoneSigningCertificate}
@@ -1106,6 +1112,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/keystone'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         keystone_identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
         keystone_auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
         keystone_public_url: { get_param: [EndpointMap, KeystonePublic, uri_no_suffix] }
@@ -1218,6 +1226,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/ovs_neutron?charset=utf8'
+              - '&bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         neutron_internal_url: { get_param: [ EndpointMap, NeutronInternal, uri ] }
         neutron_public_url: { get_param: [ EndpointMap, NeutronPublic, uri ] }
         neutron_admin_url: { get_param: [ EndpointMap, NeutronAdmin, uri ] }
@@ -1248,6 +1258,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/ceilometer'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         gnocchi_dsn:
           list_join:
             - ''
@@ -1256,6 +1268,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/gnocchi'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         gnocchi_internal_url: {get_param: [EndpointMap, GnocchiInternal, uri]}
         ceilometer_agent_auth_url: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix]}
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
@@ -1273,6 +1287,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/nova'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         nova_api_dsn:
           list_join:
             - ''
@@ -1281,6 +1297,8 @@ resources:
               - '@'
               - {get_param: MysqlVirtualIPUri}
               - '/nova_api'
+              - '?bind_address='
+              - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
         upgrade_level_nova_compute: {get_param: UpgradeLevelNovaCompute}
         instance_name_template: {get_param: InstanceNameTemplate}
         fencing_config: {get_param: FencingConfig}
@@ -1349,6 +1367,7 @@ resources:
         memcached_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, MemcachedNetwork]}]}
         mysql_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
         mysql_virtual_ip: {get_param: MysqlVirtualIP}
+        mysql_client_bind_address: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
         ceph_cluster_network: {get_attr: [NetIpSubnetMap, net_ip_subnet_map, {get_param: [ServiceNetMap, CephClusterNetwork]}]}
         ceph_public_network: {get_attr: [NetIpSubnetMap, net_ip_subnet_map, {get_param: [ServiceNetMap, CephPublicNetwork]}]}
         ceph_public_ip: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, CephPublicNetwork]}]}
@@ -1557,6 +1576,7 @@ resources:
                 mysql_cluster_name: {get_input: mysql_cluster_name}
                 mysql_bind_host: {get_input: mysql_network}
                 mysql_virtual_ip: {get_input: mysql_virtual_ip}
+                tripleo::profile::base::database::mysql::client_bind_address: {get_input: mysql_client_bind_address}
 
                 # Neutron
                 neutron::bind_host: {get_input: neutron_api_network}
